# extract

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  scriptLattes.py  setup.cfg  setup.py
examples/: areas_qualis.txt  tabela_de_pontuacoes.config  teste-01.config
gui/: single_panel.py
requirements/: development.txt
scriptLattes/: __init__.py  __main__.py  baixaLattes.py  cache.py  compiladorDeListas.py  geradorDePaginasWeb.py  grupo.py  log.py  membro.py  parserLattesXML.py  run.py  testParserLattes.py  util.py  validate.py
scriptLattes/charts/: grafoDeColaboracoes.py  mapaDeGeolocalizacao.py
scriptLattes/data_tables/: util.py
scriptLattes/eventos/: organizacaoDeEvento.py  participacaoEmEvento.py
scriptLattes/extract/: cv_lattes.py  lattes_xml_parser.py  parserLattesHTML.py  parserLattesXML.py
scriptLattes/fetch/: __init__.py  download_html.py
scriptLattes/orientacoes/: orientacaoConcluida.py  orientacaoEmAndamento.py
scriptLattes/patentesRegistros/: desenhoIndustrial.py  patente.py  programaComputador.py
scriptLattes/persist/: cache.py  store.py
scriptLattes/process/: authorRank.py  compiladorDeListas.py
scriptLattes/producoesArtisticas/: producaoArtistica.py
scriptLattes/producoesBibliograficas/: apresentacaoDeTrabalho.py  artigoAceito.py  artigoEmPeriodico.py  resumoEmCongresso.py  trabalhoCompletoEmCongresso.py
scriptLattes/producoesTecnicas/: outroTipoDeProducaoTecnica.py  softwareComPatente.py  softwareSemPatente.py
scriptLattes/qualis/: qualis.py  qualisextractor.py
scriptLattes/util/: util.py  (+1 more)
(+81 files in other folders)
