# for a pure Python package that supports Python 2 and 3
[wheel]
universal=1

# make pypi render markdown files
[metadata]
description-file = README.md

# https://pypi.python.org/pypi/bumpversion
[bumpversion]
current_version = 9.0.0
commit = True
tag = False

# add parsing for beta releases
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)-?(?P<release>[a-z]+)?
serialize =
	{major}.{minor}.{patch}-{release}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = gamma
values =
	beta
	gamma

[bumpversion:file:scriptLattes/__init__.py]
[bumpversion:file:setup.py]
# FIXME: o arquivo scriptLattes/geradorDePaginasWeb.py também usa o número de versão (TO DO: retirar)
